--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
+    "react-native-audio-streaming": "^2.3.2",
     "react-native-device-info": "^0.10.2",
     "react-native-router-flux": "^3.38.0",
     "react-redux": "^5.0.4",
