--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ buck-out/
 android/app/libs
 *.keystore
 
+# Pods
+ios/Pods
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
