adding folders to UI

--- a/ios/nando/Info.plist
+++ b/ios/nando/Info.plist
@@ -26,11 +26,10 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>911088567565-bao3vksrolvkohg19fcu8on9adqe80ee.apps.googleusercontent.com
-</string>
+			<string>com.googleusercontent.apps.911088567565-l2la7fvbd4fpaih15318tke5c5ig6qc0</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>911088567565-bao3vksrolvkohg19fcu8on9adqe80ee.apps.googleusercontent.com</string>
+				<string>com.googleusercontent.apps.911088567565-l2la7fvbd4fpaih15318tke5c5ig6qc0</string>
 			</array>
 		</dict>
 		<dict>
