--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
+    "test": "jest"
   },
   "dependencies": {
     "fs": "0.0.1-security",
@@ -13,9 +13,12 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-native-audio-streaming": "^2.3.2",
+    "react-native-card-view": "0.0.3",
     "react-native-device-info": "^0.10.2",
     "react-native-google-signin": "^0.10.0",
     "react-native-router-flux": "^3.38.0",
+    "react-native-sound": "^0.9.1",
+    "react-native-vector-icons": "^4.0.1",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
