--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-card-view": "0.0.3",
     "react-native-device-info": "^0.10.2",
     "react-native-google-signin": "^0.10.0",
+    "react-native-loading-spinner-overlay": "^0.4.4",
     "react-native-router-flux": "^3.38.0",
     "react-native-sound": "^0.9.1",
     "react-native-vector-icons": "^4.0.1",
