--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-splash-screen')
+    compile project(':react-native-linear-gradient')
     compile project(':react-native-audio-streaming')
     compile project(':react-native-sound')
     compile project(':react-native-vector-icons')
